# craeft-hs

./: .gitignore  .travis.yml  README.md  craeft-hs.cabal  stack.yaml
lib/: Codegen.hs  Lexer.hs  Scope.hs  TypeChecker.hs  Types.hs  Utility.hs
lib/Craeft/: AST.hs  Codegen.hs  Driver.hs  Lexer.hs  Parser.hs  Scope.hs  TemplateFiller.hs  TypeChecker.hs  TypedAST.hs  Types.hs  Utility.hs
lib/Craeft/TypedAST/: Impl.hs  Lens.hs  Pass.hs
src/: AST.hs  Codegen.hs  Driver.hs  Environment.hs  Error.hs  Lexer.hs  Main.hs  Parser.hs  Scope.hs  TypeChecker.hs  TypedAST.hs  Utility.hs
test/: Integration.hs  Main.hs  OperatorTest.hs  ScopeTest.hs  TemplTest.hs  TypeCheckerTest.hs  Utility.hs
test/integration/: Framework.hs  Main.hs  OperatorTest.hs  run.py
test/integration/tests/: addition.cr  addition.yaml  addition_harness.c  division.cr  division.yaml  division_harness.c  gt.cr  gt.yaml  gt_harness.c  gte.cr  gte.yaml  gte_harness.c  lt.cr  lt.yaml  lt_harness.c  lte.cr  lte.yaml  lte_harness.c  multiplication.cr  multiplication.yaml  multiplication_harness.c  subtraction_harness.c
test/unit/: AstInstances.hs  Main.hs  TypeCheckerTest.hs
