name:                craeft-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ikuehne/craeft-hs#readme
license:             GPL-3
license-file:        LICENSE
author:              Ian Kuehne
maintainer:          ikuehne@caltech.edu
copyright:           2017 Ian Kuehne
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  include-dirs:        lib
  exposed-modules:
      Craeft.AST
    , Craeft.Driver
    , Craeft.Parser
    , Craeft.Lexer
    , Craeft.Codegen
    , Craeft.Utility
    , Craeft.TypeChecker
    , Craeft.Types
    , Craeft.Scope
    , Craeft.TypedAST
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.7
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0
    , ansi-terminal        >= 0.6.0.0 && < 0.7
    , llvm-hs              >= 5.0.0
    , llvm-hs-pure         >= 5.0.0
    , containers           >= 0.5.7.1
    , lens                 >= 4.0.0

executable craeft
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.7
    , transformers         >= 0.3.0.0
    , llvm-hs              >= 5.0.0
    , llvm-hs-pure         >= 5.0.0
    , craeft-hs

test-suite lib-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Main.hs
  other-modules:
      ScopeTest
    , Utility
  build-depends:
      base                 >= 4.7
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0
    , containers           >= 0.5.7.1
    , QuickCheck           >= 2.0.0
    , craeft-hs
  default-language:  Haskell2010
