name:                craeft-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ikuehne/craeft-hs#readme
license:             GPL-3
license-file:        LICENSE
author:              Ian Kuehne
maintainer:          ikuehne@caltech.edu
copyright:           2017 Ian Kuehne
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  include-dirs:        lib
  exposed-modules:
      Craeft.AST
    , Craeft.Driver
    , Craeft.Parser
    , Craeft.Lexer
    , Craeft.Codegen
    , Craeft.Utility
    , Craeft.TypeChecker
    , Craeft.Types
    , Craeft.Scope
    , Craeft.TemplateFiller
    , Craeft.TypedAST
    , Craeft.TypedAST.Impl
    , Craeft.TypedAST.Lens
    , Craeft.TypedAST.Pass
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.0
    , parsec               >= 3.0
    , mtl                  >= 2.0
    , transformers         >= 0.3
    , ansi-terminal        >= 0.6
    , llvm-hs              >= 5.0
    , llvm-hs-pure         >= 5.0
    , containers           >= 0.5
    , lens                 >= 4.0

executable craeft
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.7
    , transformers         >= 0.3
    , llvm-hs              >= 5.0
    , llvm-hs-pure         >= 5.0
    , craeft-hs

test-suite craeft-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Main.hs
  default-language:  Haskell2010
  other-modules:
      Integration
    , OperatorTest
    , ScopeTest
    , TemplTest
    , TypeCheckerTest
    , Utility
  build-depends:
      base                 >= 4.7
    , containers           >= 0.5
    , filepath             >= 1.0
    , interpolate          >= 0.1
    , llvm-hs-pure         >= 5.0
    , process              >= 1.0
    , mtl                  >= 2.1
    , random               >= 1.0
    , tasty                >= 0.11
    , tasty-quickcheck     >= 0.8
    , tasty-hunit          >= 0.8
    , temporary            >= 1.0
    , transformers         >= 0.3
    , craeft-hs
